fix date field on IOS

--- a/style.css
+++ b/style.css
@@ -19,3 +19,15 @@
 .dark ::-webkit-scrollbar-thumb {
     background-color: #475569;
 }
+
+input[type="date"] {
+    appearance: none;
+    -webkit-appearance: none;
+    width: 100%;
+    min-height: 44px;
+    text-align: left;
+}
+
+input[type="date"]::-webkit-date-and-time-value {
+    text-align: left;
+}
